# dsexctest

./: pyproject.toml  setup.py
.github/actions/install/: action.yml
.github/workflows/: build_and_test.yml
src/test2/analysis/: __init__.py  analysis_tools.py
src/test2/data/: __init__.py
src/test2/plotting/: __init__.py  plotting_tools.py
tests/: unit_tests.py
tests/test_data/: fit_results.parquet  raw_data.parquet
