[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "test2"
version = "0.1.0"
description = "A example Python package"
authors = [
   {name = "John Doe", email = "john.doe@tum.de"},
]
dependencies = [
  "pandas>2.0",
  "numpy",
  "matplotlib",
  "pyarrow"
]


classifiers=[
        'Development Status :: 1 - Planning',    
        'Intended Audience :: Science/Research', 
        'License :: OSI Approved :: BSD License',
        'Operating System :: POSIX :: Linux',   
        'Programming Language :: Python :: 2',  
        'Programming Language :: Python :: 2.7',
        'Programming Language :: Python :: 3',  
        'Programming Language :: Python :: 3.4',
        'Programming Language :: Python :: 3.5',
]

